# RubiksCubeSolver

./: BFSSolver.h  CMakeLists.txt  DFSSolver.h  IDAStarSolver.h  IDDFSSolver.h  Readme.md  RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp  main.cpp
Inputs/: Display.cpp  Scanner.py
Models/: RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAStarSolver.h
